Hook up graphql api to frontend

--- a/hok_ecs/frontend/src/App.css
+++ b/hok_ecs/frontend/src/App.css
@@ -1,11 +1,7 @@
-#main-container {
+/* #main-container {
   padding-left: 4rem;
   padding-right: 4rem;
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-bottom: 2rem;
   height: 100vh;
-}
-
-/* .row {
-  border: 1px solid black;
 } */
