--- a/hok_ecs/frontend/src/index.css
+++ b/hok_ecs/frontend/src/index.css
@@ -14,6 +14,19 @@
   -webkit-text-size-adjust: 100%;
 } */
 
+#root {
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  font-family: 'H-book', sans-serif !important;
+}
+
 tr:hover {
   cursor: pointer;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
 }
