Add frontend routing; add createRelationship mutation

--- a/hok_ecs/frontend/src/index.scss
+++ b/hok_ecs/frontend/src/index.scss
@@ -14,6 +14,10 @@
   -webkit-text-size-adjust: 100%;
 } */
 
+$enable-negative-margins: true;
+
+@import 'bootstrap/scss/bootstrap';
+
 #root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,4 +33,10 @@ tr:hover {
 
 .cursor-not-allowed {
   cursor: not-allowed;
+}
+
+html,
+body,
+#root {
+  height: 100%;
 }
